# TankWar

./: .gitignore  AGENTS.md  BUILD_WINDOWS.md  CMakeLists.txt  CROSS_COMPILE.md  README.md
.github/workflows/: build-windows.yml
cmake/: CompilerSettings.cmake  FindSDL2.cmake  Toolchain-mingw64.cmake
docs/: DESIGN_BASELINE.md
include/ai/: AIBehavior.hpp  IAIBehavior.hpp
include/audio/: IAudioPlayer.hpp  SDLAudioPlayer.hpp
include/collision/: CollisionManager.hpp  ICollisionHandler.hpp
include/collision/handlers/: BulletBulletHandler.hpp  BulletTankHandler.hpp  BulletTerrainHandler.hpp  TankTankHandler.hpp  TankTerrainHandler.hpp
include/core/: Game.hpp  ServiceLocator.hpp
include/entities/base/: Entity.hpp  IDamageable.hpp  IEntity.hpp  IMovable.hpp  IRenderable.hpp
include/entities/effects/: Effect.hpp
include/entities/powerups/: PowerUp.hpp  PowerUpManager.hpp
include/entities/projectiles/: Bullet.hpp
include/entities/tanks/: EnemyTank.hpp  ITank.hpp  PlayerTank.hpp  Tank.hpp
include/entities/terrain/: Base.hpp  BrickWall.hpp  Grass.hpp  ITerrain.hpp  SteelWall.hpp  Terrain.hpp  Water.hpp
include/graphics/: Animation.hpp  SpriteSheet.hpp
include/input/: IInput.hpp  InputManager.hpp  PlayerInput.hpp
include/level/: EnemyWaveGenerator.hpp  Level.hpp  LevelLoader.hpp
include/rendering/: IRenderer.hpp  SDLRenderer.hpp
include/states/: ConstructionState.hpp  GameStateManager.hpp  IGameState.hpp  MenuState.hpp  PlayingState.hpp  ScoreState.hpp  StageState.hpp
include/ui/: GameHUD.hpp
include/utils/: Constants.hpp  DamageCalculator.hpp  Rectangle.hpp  Vector2.hpp
scripts/: cross-build.sh  download-sdl2-win64.sh
src/: main.cpp
src/ai/: AIBehavior.cpp
src/audio/: SDLAudioPlayer.cpp
src/collision/: CollisionManager.cpp
src/collision/handlers/: BulletBulletHandler.cpp  BulletTankHandler.cpp  BulletTerrainHandler.cpp  TankTankHandler.cpp  TankTerrainHandler.cpp
src/core/: Game.cpp
src/entities/base/: Entity.cpp
src/entities/effects/: Effect.cpp
src/entities/powerups/: PowerUp.cpp  PowerUpManager.cpp
src/entities/projectiles/: Bullet.cpp
src/entities/tanks/: EnemyTank.cpp  PlayerTank.cpp  Tank.cpp
src/entities/terrain/: Base.cpp  BrickWall.cpp  Grass.cpp  SteelWall.cpp  Terrain.cpp  Water.cpp
src/graphics/: Animation.cpp
src/input/: InputManager.cpp
src/level/: EnemyWaveGenerator.cpp  Level.cpp  LevelLoader.cpp
src/rendering/: SDLRenderer.cpp
src/states/: ConstructionState.cpp  GameStateManager.cpp  MenuState.cpp  PlayingState.cpp  ScoreState.cpp  StageState.cpp
src/ui/: GameHUD.cpp
tests/: CMakeLists.txt
tests/mocks/: MockRenderer.hpp  ScriptedInput.hpp
tests/unit/: BugRegressionTest.cpp  BulletBehaviorTest.cpp  CampaignFirstLevelFlowTest.cpp  CollisionTest.cpp  ConstructionStateExitConfirmTest.cpp  DamageCalculatorTest.cpp  EntityLifecycleTest.cpp  InputManagerKeycodeTest.cpp  LevelLoaderTest.cpp  MenuStateModeSelectionTest.cpp  PlayerMovementAndBrickWallTest.cpp  PlayerTankUpgradeTest.cpp  PlayingStateEffectsTest.cpp  PlayingStateMenuTest.cpp  PlayingStateVictoryProgressionTest.cpp  PlayingStateWaveGeneratorVictoryTest.cpp  RectangleTest.cpp  ScoreStateTest.cpp  SpriteSheetTest.cpp
